# repo-to-text

./: Cargo.toml  LICENSE  README.md  release.sh  repo_content.txt
.github/workflows/: release.yml
releases/v0.2.0/: checksums.txt
src/: main.rs
