[package]
name = "repo_to_text"
version = "0.2.0"
edition = "2021"

[dependencies]
md5 = "0.7.0"
rayon = "1.8"
regex = "1.10"
tempfile = "3.9"
clap = { version = "4.4", features = ["derive"] }
dialoguer = "0.11.0"
walkdir = "2"
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
